// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a narrow container correctly 1`] = `
<div
  className="src-components-modal-Container__container-narrow src-components-modal-Container__container"
>
  <h1
    className="src-components-modal-Container__header"
  >
    The Title
  </h1>
  <IconButton
    aria-label="Close modal dialog"
    className="src-components-modal-Container__close"
    icon={[Function]}
    onClick={[Function]}
    type="inverse"
  />
  <div
    id="child"
  />
</div>
`;

exports[`should render a non-dismissable container correctly 1`] = `
<div
  className="src-components-modal-Container__container-narrow src-components-modal-Container__container"
>
  <h1
    className="src-components-modal-Container__header"
  >
    The Title
  </h1>
  <div
    id="child"
  />
</div>
`;

exports[`should render a wide container correctly 1`] = `
<div
  className="src-components-modal-Container__container-wide src-components-modal-Container__container"
>
  <h1
    className="src-components-modal-Container__header"
  >
    The Title
  </h1>
  <IconButton
    aria-label="Close modal dialog"
    className="src-components-modal-Container__close"
    icon={[Function]}
    onClick={[Function]}
    type="inverse"
  />
  <div
    id="child"
  />
</div>
`;
